NEW [lang:english] In courses there is new option to automatically accept all students wanting to attend it.

NEW Stav publikovania zostavy úloh je teraz možné zmeniť priamo zo zoznamu zostáv úloh. (Tlačidlá [+] a [-])
NEW [lang:english] Publication status of task set can be changed directly from table of task sets now. (Buttons [+] and [-])

CHANGE V tabuľke zostáv úloh sa riadky označia červenou farbou, ak zostava nie je publikovaná.
CHANGE [lang:english] In table of task sets lines will be marked with red color if particular task set is not published.

END VERSION

VERSION 1.2.4 | 2016-01-07

NEW Do zoznamu účastníkov kurzu boli pridané tlačidlá na prihlásenie sa za študenta.
NEW [lang:english] Added buttons to list of cource participants which are authenticate teacher into student interface with selected student account.

FIX V tabuľke hodnotení bola opravená chyba, ktorá spôsobovala chybné počítanie bodov v prípade, že študent počas semestra zmenil skupinu v kurze.
FIX [lang:english] Fixed bug in evaluation table which caused incorrect computation of points for students changing groups during semester.

END VERSION

VERSION 1.2.3 | 2015-11-10

NEW Pridané checkboxy na vyberanie všetkých testov v jednej úlohe.
NEW [lang:english] Added checkbox for selecting all test in one task.

END VERSION

VERSION 1.2.2 | 2015-10-07

NEW C++ testy (jednoduché, bez sandboxu!).
NEW [lang:english] C++ tests (simple, without sandboxing!).

END VERSION

VERSION 1.2.1 | 2015-05-24

CHANGE Už sa nezobrazujú dielčie body v prehľade výsledkov testu.
CHANGE [lang:english] Partial poinst for each test run are no longer displayed in test results screen.

FIX Opravený problém, ktorý spôsoboval akumuláciu záporných dielčích bodov za testy a tým vytváral nesprávne hodnotenie.
FIX [lang:english] Fixed problem, which caused acumulation of negative partial points per task and awarding incorrect evaluation.

END VERSION

VERSION 1.2.0c | 2015-05-24
