@@ -5,7 +5,7 @@ $lang['haskell_tests_subtype_unit_test_name'] = 'Unit test';
 $lang['haskell_tests_config_form_unit_test_zip_file'] = 'Zip file with test sources';
 $lang['haskell_tests_config_form_unit_test_zip_file_hint'] = 'Upload zip file with test sources, where you have your test script <strong>.hs</strong> file and additional optional files.';
 $lang['haskell_tests_config_form_unit_test_file_to_run'] = 'Name of file to run';
-$lang['haskell_tests_config_form_unit_test_file_to_run_hint'] = 'This is the name of <strong>name</strong>_test.hs file to run, without file extension. Student file should be named as <strong>name</strong>.hs.';
+$lang['haskell_tests_config_form_unit_test_file_to_run_hint'] = 'This is the name of Test<strong>Name</strong>.hs file to run, without file extension. Student file should be named as <strong>Name</strong>.hs.';
 $lang['haskell_tests_config_form_unit_test_output_maximum_lines'] = 'Maximum lines in output';
 $lang['haskell_tests_config_form_unit_test_output_maximum_lines_hint'] = 'This will limit maximum lines in test output. If it is set to <strong>0</strong>, no limitations will be carried out.';
 $lang['haskell_tests_run_error_unit_test_file_not_set'] = 'Test file was not set correctly.';
