@@ -44,6 +44,7 @@ $lang['admin_task_sets_test_priority_level_1'] = 'Vysoká';
 $lang['admin_task_sets_test_priority_level_2'] = 'Normálna';
 $lang['admin_task_sets_test_priority_level_3'] = 'Nízka';
 $lang['admin_task_sets_form_button_submit'] = 'Uložiť';
+$lang['admin_task_sets_form_button_submit_and_open'] = 'Uložiť a otvoriť zostavu';
 $lang['admin_task_sets_form_field_content_type'] = 'typ obsahu';
 $lang['admin_task_sets_form_field_name'] = 'názov';
 $lang['admin_task_sets_form_field_course_id'] = 'kurz';
@@ -163,4 +164,4 @@ $lang['admin_task_sets_project_selection_fieldset_legend_not_selected'] = 'Štud
 $lang['admin_task_sets_project_selection_hint'] = 'Tu môžete vidieť zoznam úloh s zoznamom študentov, ktorí majú úlohu vybranú. Šedá položka zoznamu znamená, že študent už odoslal riešenie úlohy a nie je už viac možné zmeniť jeho vybranú úlohu. Zmeniť úlohu študentovi môžete uchopením a potiahnutím položky s menom študenta do zoznamu príslušnej úlohy. <strong>POZOR: Momentálne nie je možné študentovu položku vrátiť nazad do zoznamu študentov bez vybranej úlohy!</strong>';
 $lang['admin_task_sets_project_selection_select_question'] = 'Ste si istý(á), že chcete vybrať túto úlohu pre daného študenta?';
 $lang['admin_task_sets_help_button_new_task_set'] = 'Pomoc s formulárom novej zostavy';
-$lang['admin_task_sets_publication_status_switched'] = 'Stav publikovania zostavy "%s" sa zmenil.';
+$lang['admin_task_sets_publication_status_switched'] = 'Stav publikovania zostavy <em>%s</em> sa zmenil.';
