@@ -5,7 +5,7 @@ $lang['haskell_tests_subtype_unit_test_name'] = 'Unit test';
 $lang['haskell_tests_config_form_unit_test_zip_file'] = 'Zip súbor so zdrojovým kódom';
 $lang['haskell_tests_config_form_unit_test_zip_file_hint'] = 'Nahrajte súbor zip so zdrojovým kódom, kde bude váš testový skript v súbore <strong>.hs</strong> a prípadne ďalšie volitelné súbory.';
 $lang['haskell_tests_config_form_unit_test_file_to_run'] = 'Súbor na spustenie';
-$lang['haskell_tests_config_form_unit_test_file_to_run_hint'] = 'Toto je meno súboru <strong>názov</strong>_test.hs, ktorý bude spustený, uvádza sa bez prípony. Študentov súbor by sa mal volať <strong>názov</strong>.hs.';
+$lang['haskell_tests_config_form_unit_test_file_to_run_hint'] = 'Toto je meno súboru Test<strong>Názov</strong>.hs, ktorý bude spustený, uvádza sa bez prípony. Študentov súbor by sa mal volať <strong>Názov</strong>.hs.';
 $lang['haskell_tests_config_form_unit_test_output_maximum_lines'] = 'Maximum riadkov výstupu';
 $lang['haskell_tests_config_form_unit_test_output_maximum_lines_hint'] = 'Toto nastavenie obmedzí počet riadkov na výstupe. Ak je nastavené na <strong>0</strong>, nepoužije sa žiadne limitovanie.';
 $lang['haskell_tests_run_error_unit_test_file_not_set'] = 'Súbor s testom nebol správne nastavený.';
